--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^5.2.2",
     "eslint-plugin-prettier": "^4.2.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.3",
     "react-redux": "^8.0.5",
