--- a/.eslintrc
+++ b/.eslintrc
@@ -56,7 +56,7 @@
       }
     ],
     "@typescript-eslint/interface-name-prefix": "off",
-    "@typescript-eslint/ban-ts-comment": "error",
+    "@typescript-eslint/ban-ts-comment": "warn",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-empty-function": "off",
