--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "project-management-system",
   "version": "0.1.0",
+  "homepage": "https://maxlmysim.github.io/project-management-system/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -15,6 +16,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.8",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.1.3",
@@ -22,7 +24,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "@types/react-beautiful-dnd": "^13.1.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.3",
     "react-redux": "^8.0.5",
@@ -32,6 +33,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -56,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.5.0"
+    "eslint-config-prettier": "^8.5.0",
+    "gh-pages": "^4.0.0"
   }
 }
