--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
-    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.8",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.1.3",
@@ -63,8 +62,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
-    "i18next-browser-languagedetector": "^7.0.1"
-    "eslint-config-prettier": "^8.5.0",
+    "i18next-browser-languagedetector": "^7.0.1",
     "gh-pages": "^4.0.0"
   }
 }
